<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/cardapio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="OnClickCardapio"
        android:text="@string/cardapio" />

    <Button
        android:id="@+id/meus_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="OnClickMeusPedidos"
        android:text="@string/meus_pedido" />

    <Button
        android:id="@+id/bnt_qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickQrcode"
        android:text="@string/ler_qrcode" />

</LinearLayout>