<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp" >

        <TextView
            android:id="@+id/item_descricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
         <TextView
             android:id="@+id/preco_item"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_weight="194.88"
             android:textAppearance="?android:attr/textAppearanceLarge" />

         <EditText
             android:id="@+id/quantidade"
             android:layout_width="20dp"
             android:layout_height="wrap_content"
             android:layout_weight="44.62"
             android:ems="10"
             android:inputType="numberDecimal"
             android:text="@string/preco_zero" >

             <requestFocus />
         </EditText>

        <Button
            android:id="@+id/b_add"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="26.96"
            android:minWidth="20dp"
            android:text="@string/add"
            android:textSize="12sp"
            android:width="20dp" />

        <Button
            android:id="@+id/b_sub"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="26.96"
            android:text="@string/sub"
            android:textSize="12sp"
            android:width="10dp" />

    </LinearLayout>

</LinearLayout>